@@ -9,6 +9,7 @@ v1.5.0 (WIP)
 - Revamp FormItem styling as FormItem.SetAttributes
 - Provide DropDownOption in DropDown handlers
 - Provide ListItem in List handlers
+- Panic when attempting to add an invalid FormItem
 
 v1.4.9 (2020-09-08)
 - Add InputField.GetCursorPosition and InputField.SetCursorPosition
